font-family: Garamond, serif;

--- a/static/testpage/index.html
+++ b/static/testpage/index.html
@@ -7,7 +7,7 @@
       
         body {
           /* font-family: Verdana, sans-serif; */
-          font-family: 'IBM Plex Sans';
+          font-family: Garamond, serif;
           font-size: 18px;
           line-height: 1.4;
           text-rendering: optimizeLegibility;
